portfolio/programming/CPP/workspace_all/.metadata/.plugins/org.eclipse.cdt.ui/ex.9-1.build.log
15:15:38 **** Build of configuration Debug for project ex.9-1 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
Building file: ../ex.9-1.cpp
Invoking: Cygwin C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"ex.9-1.d" -MT"ex.9-1.o" -o "ex.9-1.o" "../ex.9-1.cpp"
../ex.9-1.cpp:24:2: error: C++ requires a type specifier for all declarations
        birth, independenceDay();
        ^
../ex.9-1.cpp:24:9: error: C++ requires a type specifier for all declarations
        birth, independenceDay();
               ^
../ex.9-1.cpp:19:7: error: use of undeclared identifier 'year'
                x = year;
                    ^
../ex.9-1.cpp:20:7: error: use of undeclared identifier 'month'
                y = month;
                    ^
../ex.9-1.cpp:21:7: error: use of undeclared identifier 'day'
                z = day;
                    ^
../ex.9-1.cpp:26:24: error: use of undeclared identifier 'year'; did you mean 'cerr'?
        int getYear() {return year};
                              ^~~~
                              cerr
/Library/Developer/CommandLineTools/usr/include/c++/v1/iostream:57:33: note: 'cerr' declared here
extern _LIBCPP_FUNC_VIS ostream cerr;
                                ^
../ex.9-1.cpp:26:28: error: expected ';' after return statement
        int getYear() {return year};
                                  ^
                                  ;
../ex.9-1.cpp:27:25: error: use of undeclared identifier 'month'
        int getMonth() {return month};
                               ^
../ex.9-1.cpp:28:23: error: use of undeclared identifier 'day'
        int getDay() {return day};
                             ^
../ex.9-1.cpp:31:20: warning: illegal character encoding in string literal [-Winvalid-source-encoding]
                cout << year << "<B3><E2>" << month << "<BF><F9>" << day << "<C0><CF>" << endl;
                                 ^~~~~~~~
../ex.9-1.cpp:31:37: warning: illegal character encoding in string literal [-Winvalid-source-encoding]
                cout << year << "<B3><E2>" << month << "<BF><F9>" << day << "<C0><CF>" << endl;
                                                        ^~~~~~~~
../ex.9-1.cpp:31:52: warning: illegal character encoding in string literal [-Winvalid-source-encoding]
                cout << year << "<B3><E2>" << month << "<BF><F9>" << day << "<C0><CF>" << endl;
                                                                             ^~~~~~~~
../ex.9-1.cpp:31:11: error: use of undeclared identifier 'year'
                cout << year << "<B3><E2>" << month << "<BF><F9>" << day << "<C0><CF>" << endl;
                        ^
../ex.9-1.cpp:31:27: error: use of undeclared identifier 'month'
                cout << year << "<B3><E2>" << month << "<BF><F9>" << day << "<C0><CF>" << endl;
                                              ^
../ex.9-1.cpp:31:44: error: use of undeclared identifier 'day'
                cout << year << "<B3><E2>" << month << "<BF><F9>" << day << "<C0><CF>" << endl;
                                                                     ^
../ex.9-1.cpp:39:7: error: no matching constructor for initialization of 'Date'
        Date independenceDay("1945/8/15");
             ^               ~~~~~~~~~~~
../ex.9-1.cpp:12:7: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'const char [10]' to 'const Date' for 1st argument
class Date
      ^
../ex.9-1.cpp:18:2: note: candidate constructor not viable: requires 3 arguments, but 1 was provided
        Date(int x, int y, int z){
        ^
3 warnings and 13 errors generated.
make: *** [ex.9-1.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

15:15:39 Build Failed. 14 errors, 3 warnings. (took 738ms)

